# playwright-stepper-framework

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  PAGE_ANALYZER.md  README.md  SAAS_STRATEGY.md  SAAS_VISION.md  SUBMISSION.md  pyproject.toml  requirements.txt  smoke_check.py
.claude/: CONCEPTS.md  settings.json
.claude/agents/: README.md  brainstorm.md  implement.md  quick.md
.claude/hooks/: guard-dangerous-commands.js  layer-boundary-reminder.js  post-edit-pom-check.js  pyright-check.py
.claude/rules/: design-patterns.md  glue-layer.md  pom-layer.md  resolver-cascade.md  site-actions.md  three-layer-contract.md
.github/workflows/: ci.yml
agents/: discoverer.md
docs/anti_detection/: conv_split.md  issues.md  plan_implementation.md  progress.md  solutions.md  user_story.md
exam/: BugAnalysisExplained.md  EXAM_REQUIREMENTS_REVIEW.md  ReadMeAIBugs.md  conftest.py  flows.py
exam-docs/: exam_content.md  exam_task_and_concepts.md  stepper_exam_analysis.md
jira-to-stepper-pipeline/: ARCHITECTURE_PROPOSAL.md  CONVERSATION_PROMPTS.md  EDGE_CASES.md  FLOW_DIAGRAM.md  HAPPY_FLOW.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  USER_STORIES.md
poms/: __init__.py
scripts/: auto-flow.sh
shared_poms/: auth.py  config.py  driver.py  interfaces.py  performance.py
stepper/: .env.example  conftest.py  download_models.py  main.py  pytest.ini  report.json
strategy/: conversation_prompts.md  explanations.md  findings.md  implementation_plan.md  progress.md  solutions.md
tests/: test.md  test_all_flows_comprehensive.py  test_stepper_data_driven.py
(+422 files in other folders)
